# OOPS23-lambda-020

./: CMakeLists.txt  Framework.cpp  Framework.hpp  lambda.cpp
